<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">CameraOMAP</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="cpcam_camera_label">CPcamOMAP</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="confirm_restore_message">Do you want to restore camera default settings?</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">5</string>
    <string name="pref_video_quality_entry_1080p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_720p" translatable="false">HD</string>
    <string name="pref_video_quality_entry_480p" translatable="false">SD</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1000" translatable="false">1s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1500" translatable="false">1.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2000" translatable="false">2s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2500" translatable="false">2.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_3000" translatable="false">3s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_5000" translatable="false">5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10000" translatable="false">10s</string>
    <string name="pref_camera_audioencoder_category">Audio Encoder</string>
    <string name="pref_camera_audioencoder_default">3</string>
    <string name="pref_camera_audioencoder_title">Select Audio Encoder</string>
    <string name="pref_camera_audioencoder_entry_1">AMR-NB</string>
    <string name="pref_camera_audioencoder_entry_2">AMR-WB</string>
    <string name="pref_camera_audioencoder_entry_3">AAC</string>
    <string name="pref_camera_videobitrate_category">Video BitRate</string>
    <string name="pref_camera_videobitrate_default">12000000</string>
    <string name="pref_camera_videobitrate_title">Select Video BitRate</string>
    <string name="pref_camera_videobitrate_entry_0">Auto</string>
    <string name="pref_camera_videobitrate_entry_1">64K</string>
    <string name="pref_camera_videobitrate_entry_2">128K</string>
    <string name="pref_camera_videobitrate_entry_3">192K</string>
    <string name="pref_camera_videobitrate_entry_4">240K</string>
    <string name="pref_camera_videobitrate_entry_5">320K</string>
    <string name="pref_camera_videobitrate_entry_6">360K</string>
    <string name="pref_camera_videobitrate_entry_7">384K</string>
    <string name="pref_camera_videobitrate_entry_8">420K</string>
    <string name="pref_camera_videobitrate_entry_9">768K</string>
    <string name="pref_camera_videobitrate_entry_10">1M</string>
    <string name="pref_camera_videobitrate_entry_11">1.5M</string>
    <string name="pref_camera_videobitrate_entry_12">2M</string>
    <string name="pref_camera_videobitrate_entry_13">4M</string>
    <string name="pref_camera_videobitrate_entry_14">6M</string>
    <string name="pref_camera_videobitrate_entry_15">8M</string>
    <string name="pref_camera_videobitrate_entry_16">10M</string>
    <string name="pref_camera_videobitrate_entry_17">12M</string>
    <string name="pref_camera_videobitrate_entry_18">14M</string>
    <string name="pref_camera_videobitrate_entry_19">16M</string>
    <string name="pref_camera_videobitrate_entry_20">18M</string>
    <string name="pref_camera_videobitrate_entry_21">20M</string>
    <string name="pref_camera_videoframerate_range_default" translatable="false">30000,30000</string>
    <string name="pref_camera_videoframerate_range_title">Select FrameRate Range</string>
    <string name="pref_camera_videoencoder_category">Video Encoder</string>
    <string name="pref_camera_videoencoder_default">2</string>
    <string name="pref_camera_videoencoder_title">Select Video Encoder</string>
    <string name="pref_camera_videoencoder_entry_1">H263</string>
    <string name="pref_camera_videoencoder_entry_2">H264</string>
    <string name="pref_camera_videoencoder_entry_3">MPEG4</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_video_format_default" translatable="false">8</string>
    <string name="pref_camera_video_format_title">Video Format</string>
    <string name="pref_camera_video_format_entry_0_sqcif">SQCIF 128x96</string>
    <string name="pref_camera_video_format_entry_1_qcif">QCIF 176x144</string>
    <string name="pref_camera_video_format_entry_2_cif">CIF 352x288</string>
    <string name="pref_camera_video_format_entry_3_qvga">QVGA 320x240</string>
    <string name="pref_camera_video_format_entry_4_vga">VGA 640x480</string>
    <string name="pref_camera_video_format_entry_5_ntsc">DVD-Video NTSC 720x480</string>
    <string name="pref_camera_video_format_entry_6_pal">DVD-Video PAL 720x576</string>
    <string name="pref_camera_video_format_entry_7_wvga">WVGA 800x480</string>
    <string name="pref_camera_video_format_entry_8_720p">1280x720</string>
    <string name="pref_camera_video_format_entry_9_1080p">1920x1080</string>
    <string name="pref_camera_video_format_dialogtitle">Video format</string>
    <string name="pref_camera_video_timer_default" translatable="false">true</string>
    <string name="pref_camera_video_timer_title">Recording timer</string>
    <string name="pref_camera_video_timer_entry_on">ON</string>
    <string name="pref_camera_video_timer_entry_off">OFF</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_4416x3312">14M pixels</string>
    <string name="pref_camera_picturesize_entry_4032x3024">12M pixels</string>
    <string name="pref_camera_picturesize_entry_3648x2736">10M pixels</string>
    <string name="pref_camera_picturesize_entry_3280x2464">8M pixels</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M pixels</string>
    <string name="pref_camera_picturesize_entry_2592x1936">5M pixels</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M pixels</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M pixels</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M pixels</string>
    <string name="pref_camera_picturesize_entry_640x480">VGA</string>
    <string name="pref_camera_picturesize_entry_320x240">QVGA</string>
    <string name="pref_camera_previewsize_title">Preview size</string>
    <string name="pref_camera_previewsize_default">640x480</string>
    <string name="pref_camera_previewsize_entry_sqcif">SQCIF</string>
    <string name="pref_camera_previewsize_entry_qcif">QCIF</string>
    <string name="pref_camera_previewsize_entry_cif">CIF</string>
    <string name="pref_camera_previewsize_entry_qvga">QVGA</string>
    <string name="pref_camera_previewsize_entry_vga">VGA</string>
    <string name="pref_camera_previewsize_entry_pal">PAL</string>
    <string name="pref_camera_previewsize_entry_ntsc">NTSC</string>
    <string name="pref_camera_previewsize_entry_wvga">WVGA</string>
    <string name="pref_camera_previewsize_entry_hd">720p</string>
    <string name="pref_camera_previewsize_entry_fullhd">Full HD</string>
    <string name="pref_camera_previewframerate_title">Select FPS</string>
    <string name="pref_camera_previewframerate_default">30</string>
    <string name="pref_camera_previewframerate_entry_five">5</string>
    <string name="pref_camera_previewframerate_entry_ten">10</string>
    <string name="pref_camera_previewframerate_entry_fifteen">15</string>
    <string name="pref_camera_previewframerate_entry_twenty">20</string>
    <string name="pref_camera_previewframerate_entry_twentyfour">24</string>
    <string name="pref_camera_previewframerate_entry_twentyseven">27</string>
    <string name="pref_camera_previewframerate_entry_thirty">30</string>
    <string name="pref_camera_video_mode_title">Video mode</string>
    <string name="pref_camera_video_mode_default">video-mode</string>
    <string name="pref_camera_video_mode_entry_st">Standard</string>
    <string name="pref_camera_video_mode_entry_hq">High Quality</string>
    <string name="pref_camera_mode_title">Capture mode</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_vstab_default" translatable="false">false</string>
    <string name="pref_camera_vstab_title">Video Stabilization</string>
    <string name="pref_camera_vnf_default" translatable="false">false</string>
    <string name="pref_camera_vnf_title">Video Noise Filtering</string>
    <string name="pref_video_record_container_title">Video File Container</string>
    <string name="pref_video_record_container_default" translatable="false">mp4</string>
    <string name="pref_camera_autoconvergence_default" translatable="false">frame</string>
    <string name="pref_camera_autoconvergence_title">Auto Convergence Mode</string>
    <string name="settings_manual_3d_exposure_left_caption">Left Manual Exposure [ms]: </string>
    <string name="settings_manual_3d_exposure_right_caption">Right Manual Exposure [ms]: </string>
    <string name="settings_manual_3d_gain_left_caption">Left ISO: </string>
    <string name="settings_manual_3d_gain_right_caption">Right ISO: </string>
    <string name="settings_manual_2d_exposure_caption"> Manual Exposure [ms]: </string>
    <string name="settings_manual_2d_gain_caption">Manual ISO: </string>
    <string name="settings_manual_gain_exposure_button_ok">OK</string>
    <string name="pref_video_effect_default" translatable="false">none</string>
    <string name="pref_video_effect_title">Effects</string>
</resources>